docs: update Swagger schema to include patientId in UserProfile
- Add patientId field to UserProfile schema in auth.yaml
- Field is optional and only present for patient users
- Includes proper description and example UUID
- Updates API documentation to reflect login response changes

--- a/src/swagger/schemas/auth.yaml
+++ b/src/swagger/schemas/auth.yaml
@@ -63,6 +63,11 @@ components:
         phone:
           type: string
           example: "+1234567890"
+        patientId:
+          type: string
+          format: uuid
+          example: ca5152c7-5300-4ea9-b519-82ca32a16f88
+          description: Patient ID (only present for patient users)
         isActive:
           type: boolean
           example: true
