--- a/env.example
+++ b/env.example
@@ -14,6 +14,19 @@ DB_DIALECT=postgres
 JWT_SECRET=your_super_secret_jwt_key_here
 JWT_EXPIRES_IN=24h
 
+# QR Code Configuration
+QR_ENCRYPTION_KEY=your_qr_encryption_key_here_change_in_production
+
+# Email Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your_email@gmail.com
+SMTP_PASS=your_app_password
+
+# Frontend URL (for email links)
+FRONTEND_URL=http://localhost:3000
+
 # Test Database Configuration (for running tests)
 TEST_DB_HOST=localhost
 TEST_DB_PORT=5432
