--- a/src/swagger/schemas/doctors.yaml
+++ b/src/swagger/schemas/doctors.yaml
@@ -99,7 +99,7 @@ components:
                   type: string
                 role:
                   type: string
-                  enum: [doctor]
+                  enum: ["doctor"]
                 phone:
                   type: string
             doctor:
