--- a/src/swagger/schemas/common.yaml
+++ b/src/swagger/schemas/common.yaml
@@ -35,15 +35,105 @@ components:
         page:
           type: integer
           example: 1
+          description: Current page number
         limit:
           type: integer
           example: 10
+          description: Number of items per page
         total:
           type: integer
           example: 100
+          description: Total number of items
         totalPages:
           type: integer
           example: 10
+          description: Total number of pages
+        hasNextPage:
+          type: boolean
+          example: true
+          description: Whether there is a next page
+        hasPrevPage:
+          type: boolean
+          example: false
+          description: Whether there is a previous page
+
+    PaginationParams:
+      type: object
+      properties:
+        page:
+          type: integer
+          minimum: 1
+          default: 1
+          description: Page number (starts from 1)
+        limit:
+          type: integer
+          minimum: 1
+          maximum: 100
+          default: 10
+          description: Number of items per page (max 100)
+
+    AdvancedPaginationParams:
+      type: object
+      properties:
+        page:
+          type: integer
+          minimum: 1
+          default: 1
+          description: Page number (starts from 1)
+        limit:
+          type: integer
+          minimum: 1
+          maximum: 100
+          default: 10
+          description: Number of items per page (max 100)
+        sortBy:
+          type: string
+          enum:
+            [
+              "createdAt",
+              "updatedAt",
+              "fullName",
+              "email",
+              "visitDate",
+              "prescriptionNumber",
+            ]
+          default: createdAt
+          description: Field to sort by
+        sortOrder:
+          type: string
+          enum: ["ASC", "DESC"]
+          default: DESC
+          description: Sort order
+
+    MedicalHistoryPaginationParams:
+      type: object
+      properties:
+        page:
+          type: integer
+          minimum: 1
+          default: 1
+          description: Page number (starts from 1)
+        limit:
+          type: integer
+          minimum: 1
+          maximum: 50
+          default: 10
+          description: Number of items per page (max 50)
+        type:
+          type: string
+          enum: ["visits", "prescriptions", "all"]
+          default: all
+          description: Type of medical history to retrieve
+        sortBy:
+          type: string
+          enum: ["createdAt", "visitDate", "prescriptionNumber"]
+          default: createdAt
+          description: Field to sort by
+        sortOrder:
+          type: string
+          enum: ["ASC", "DESC"]
+          default: DESC
+          description: Sort order
 
     ValidationError:
       type: object
