feat: implement JWT token blacklisting for secure logout
- Add TokenBlacklist model with proper database schema mapping
- Create database migration for token_blacklist table with snake_case columns
- Implement logout endpoint with token invalidation
- Add token blacklist check to authentication middleware
- Update AuthService with logout and token cleanup methods
- Add Swagger documentation for logout endpoint
- Create token cleanup utility for expired token removal

Features:
- Tokens are immediately invalidated upon logout
- Blacklisted tokens are rejected even if still within JWT expiration
- Automatic cleanup of expired tokens from blacklist
- Proper error handling for blacklist check failures
- Database schema uses snake_case for consistency with existing tables

Security improvements:
- Prevents token reuse after logout
- Maintains audit trail of revoked tokens
- Graceful fallback if blacklist check fails

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "test:unit": "jest tests/",
     "test:services": "jest tests/services/",
     "test:controllers": "jest tests/controllers/",
-    "test:models": "jest tests/models/"
+    "test:models": "jest tests/models/",
+    "cleanup-tokens": "ts-node src/utils/tokenCleanup.ts"
   },
   "keywords": [
     "healthcare",
