feat: add QR code Swagger docs, web scanner interface, and TypeScript types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
   ],
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    "src/tests/**/*",
+    "src/**/*.test.ts",
+    "src/**/*-test.ts"
   ]
 }
