--- a/src/swagger/paths/qrCodes.yaml
+++ b/src/swagger/paths/qrCodes.yaml
@@ -67,7 +67,7 @@ paths:
       tags:
         - QR Codes
       summary: Generate QR code for a prescription
-      description: Creates a new QR code for the specified prescription with encrypted data
+      description: Creates a new QR code for the specified prescription with encrypted data (Doctor, Admin only)
       parameters:
         - name: prescriptionId
           in: path
@@ -131,75 +131,8 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /qr-codes/verify/{qrHash}:
-    get:
-      tags:
-        - QR Codes
-      summary: Verify QR code
-      description: Verifies a QR code and returns prescription details if valid
-      parameters:
-        - name: qrHash
-          in: path
-          required: true
-          schema:
-            type: string
-          description: The QR code hash to verify
-      security:
-        - bearerAuth: []
-      responses:
-        200:
-          description: QR code verified successfully
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  success:
-                    type: boolean
-                    example: true
-                  data:
-                    type: object
-                    properties:
-                      isValid:
-                        type: boolean
-                        example: true
-                      prescription:
-                        $ref: "#/components/schemas/Prescription"
-                      qrCode:
-                        $ref: "#/components/schemas/QRCode"
-                      scanCount:
-                        type: integer
-                        example: 1
-        400:
-          description: Bad Request - Invalid input data
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-        401:
-          description: Unauthorized - Invalid or missing token
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-        403:
-          description: Forbidden - Insufficient permissions
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-        404:
-          description: Not Found - Resource not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-        500:
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
+  # Note: QR code verification is now handled through the pharmacy workflow
+  # Use POST /pharmacy/scan instead of this standalone verification endpoint
 
   /qr-codes/stats/{qrHash}:
     get:
@@ -285,7 +218,7 @@ paths:
       tags:
         - QR Codes
       summary: Send prescription email with QR code
-      description: Sends an email to the patient with prescription details and QR code attachment
+      description: Sends an email to the patient with prescription details and QR code attachment (Doctor, Admin only)
       parameters:
         - name: prescriptionId
           in: path
@@ -355,7 +288,7 @@ paths:
       tags:
         - QR Codes
       summary: Get QR code for prescription
-      description: Retrieves the QR code information for a specific prescription
+      description: Retrieves the QR code information for a specific prescription (Doctor, Admin, Patient only)
       parameters:
         - name: prescriptionId
           in: path
