feat: add Render deployment configuration
- Add render.yaml for service configuration
- Add Dockerfile for containerized deployment
- Add .dockerignore for optimized builds
- Add Procfile for Heroku compatibility
- Add env.production.example for production env vars
- Add DEPLOYMENT.md with complete deployment guide
- Update package.json with postbuild migration script

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc",
+    "postbuild": "npm run db:migrate",
     "lint": "eslint . --ext .ts,.js,.mts,.mjs",
     "lint:fix": "eslint . --ext .ts,.js,.mts,.mjs --fix",
     "db:migrate": "sequelize-cli db:migrate",
