--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "types": ["jest", "node"],
+    "types": ["node"],
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true
   },
