fix: move TypeScript type definitions to production dependencies
- Move essential @types/* packages from devDependencies to dependencies
- Update tsconfig.prod.json to include all necessary types
- Remove duplicate type definitions from devDependencies
- Ensure production build has access to all required type definitions

--- a/package.json
+++ b/package.json
@@ -53,25 +53,25 @@
     "sequelize": "^6.35.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "uuid": "^9.0.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^8.56.0",
-    "@jest/types": "^30.0.5",
+    "uuid": "^9.0.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^30.0.0",
-    "@types/joi": "^17.2.2",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.9.0",
     "@types/nodemailer": "^6.4.14",
     "@types/qrcode": "^1.5.5",
-    "@types/sqlite3": "^3.1.11",
-    "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
-    "@types/uuid": "^9.0.7",
+    "@types/uuid": "^9.0.7"
+  },
+  "devDependencies": {
+    "@eslint/js": "^8.56.0",
+    "@jest/types": "^30.0.5",
+    "@types/jest": "^30.0.0",
+    "@types/joi": "^17.2.2",
+    "@types/sqlite3": "^3.1.11",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
