fix: resolve database migration and SSL issues for production deployment
- Remove database migrations from build process to avoid SSL errors
- Create startup script that runs migrations when server starts
- Update database config to require SSL for production
- Add migration script for manual database setup
- Separate build and migration concerns for better deployment flow

--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "Digital Prescription & Patient Records System Backend",
   "main": "dist/server.js",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node dist/scripts/startup.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc --project tsconfig.prod.json",
     "build:dev": "tsc",
-    "postbuild": "npm run db:migrate",
+    "postbuild": "echo 'Build completed. Run migrations separately in production.'",
     "lint": "eslint . --ext .ts,.js,.mts,.mjs",
     "lint:fix": "eslint . --ext .ts,.js,.mts,.mjs --fix",
     "db:migrate": "sequelize-cli db:migrate",
+    "migrate": "node dist/scripts/migrate.js",
     "db:migrate:undo": "sequelize-cli db:migrate:undo",
     "db:migrate:undo:all": "sequelize-cli db:migrate:undo:all",
     "db:seed": "sequelize-cli db:seed:all",
