fix: copy Swagger YAML files to dist folder during build
- Add copy-swagger-files script to package.json
- Update build process to copy YAML files to dist/swagger/
- Fix missing API endpoints in production Swagger UI
- Ensure all Swagger documentation is available in production

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "node dist/scripts/startup.js",
     "dev": "nodemon src/server.ts",
-    "build": "tsc --project tsconfig.prod.json",
+    "build": "tsc --project tsconfig.prod.json && npm run copy-swagger-files",
     "build:dev": "tsc",
+    "copy-swagger-files": "cp -r src/swagger/paths dist/swagger/ && cp -r src/swagger/schemas dist/swagger/",
     "postbuild": "echo 'Build completed. Run migrations separately in production.'",
     "lint": "eslint . --ext .ts,.js,.mts,.mjs",
     "lint:fix": "eslint . --ext .ts,.js,.mts,.mjs --fix",
