fix: update Render deployment configuration for database migrations
- Add database migration to buildCommand in render.yaml
- Add deploy script for manual migration execution
- Ensure new dispensing fields are migrated on deployment

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "start": "node dist/scripts/startup.js",
+    "deploy": "npm run build && npm run db:migrate && npm start",
     "dev": "nodemon src/server.ts",
     "build": "tsc --project tsconfig.prod.json && npm run copy-swagger-files",
     "build:dev": "tsc",
