--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: prescripto-backend
     env: node
     plan: starter
-    buildCommand: npm install && npm run build
+    buildCommand: npm install && npm run build && npm run db:migrate
     startCommand: npm start
     healthCheckPath: /health
     envVars:
